Updates from Overleaf

--- a/Pol-draftvfinal.tex
+++ b/Pol-draftvfinal.tex
@@ -201,9 +201,9 @@ and heavy-baryon (HB$\chi$PT) frameworks.
 The forward doubly-virtual 
 Compton scattering (VVCS), \Figref{CSgeneric}, is not a directly observable process. Nevertheless, it 
 is traditionally of high relevance in studies
-of nucleon and nuclear structure, and of their impact on atomic nuclei. Ah high energies
+of nucleon and nuclear structure, and of their impact on atomic nuclei. At high energies
 the VVCS has the  apparent connections to deep-inelastic scattering, whereas 
-at low energy it is important for precision atomic spectroscopy, where it serves as input for calculations of the nuclear-structure corrections. Analytical properties of the VVCS amplitude
+at low energies it is important for precision atomic spectroscopy, where it serves as input for calculations of the nuclear-structure corrections. Analytical properties of the VVCS amplitude
 are used to establish useful relations --- sum rules ---
 between the static 
 (electromagnetic moments, polarizabilites) 
